set(TARGET_NAME waveform)
add_definitions(-DHAS_SDL -DHAS_SDL_OPENGL)
if(WIN32)
  set(TARGET_NAME waveform_win32)
endif()
add_library(${TARGET_NAME} MODULE Main.cpp)
target_link_libraries(${TARGET_NAME} ${CONFIG_LIBRARY_OPENGL})
install(TARGETS ${TARGET_NAME} LIBRARY DESTINATION ${RESOURCEPATH}/addons/visualization.waveform)
